# plate_motion

./: README.md  pyproject.toml
plate_motion/: __init__.py  absolute_rotaion_poles_from_ITRF2005.py  plate_motion.py
plate_motion/plate_boundaries/: Readme.md  make_geojson.py  pb2002_plates.geojson
tests/: test_plate_motion.py
