[tool.poetry]
name = "plate-motion"
version = "0.1.0"
description = "ITRF2005 で求めたプレートの絶対回転運動を出力するライブラリ"
authors = ["KUWAHARA Masaki"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geojson = "^3.1.0"
numpy = ">=1.26.0"
pymap3d = "^3.1.0"
shapely = "^2.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pandas = "^2.2.2"
antimeridian = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
